Fixing 100% height on mobile.
* Setting border color on hr.
* Minifying css.
* Inlining CSS and some JS for faster performance.

--- a/src/theme.less
+++ b/src/theme.less
@@ -1,3 +1,4 @@
+@import './pages/less/constants';
 @import url('https://fonts.googleapis.com/css?family=ABeeZee');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 @import '../node_modules/bootstrap-material-design/less/_colors';
@@ -62,4 +63,11 @@ button {
     background-color: @blue-500;
     color: @white;
   }
+}
+
+hr {
+  border-color: @grey-300;
+  border-style: solid;
+  border-width: 1px;
+  border-bottom: 0;
 }
